--- a/src/components/buttons/css/FavoriteHeartButton.css
+++ b/src/components/buttons/css/FavoriteHeartButton.css
@@ -3,10 +3,9 @@
   display: flex;
   font-size: 20px;
   justify-content: flex-end;
-  padding-right: 5px;
   padding-top: 5px;
   position: absolute;
-  width: 200px;
+  width: 230px;
 }
 
 .icon-heart button {
@@ -16,4 +15,5 @@
   height: 30px;
   outline: none;
   width: 30px;
+  margin-right: 10px;
 }
