--- a/src/pages/css/Home.css
+++ b/src/pages/css/Home.css
@@ -4,6 +4,7 @@ body {
   font-family: Open Sans, sans-serif;
   margin: 0;
   padding: 0;
+  background-color:rgba(215, 215, 215, 0.088);
 }
 
 ::-webkit-scrollbar {
