--- a/src/components/header/css/Header.css
+++ b/src/components/header/css/Header.css
@@ -1,6 +1,5 @@
 * {
   box-sizing: border-box;
-  color: rgb(94, 94, 94);
   font-family: Open Sans, sans-serif;
   margin: 0;
   padding: 0;
@@ -20,7 +19,7 @@ a:hover {
 
 .header {
   align-items: center;
-  background-color: #ffc8dd;
+  background-color: white;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
   display: flex;
   height: 100px;
@@ -50,7 +49,72 @@ a:hover {
   opacity: 0.8;
   outline: none;
   white-space: nowrap;
-  width: fit-content;
+  width: 150px;
+}
+
+.nav {
+  display: flex;
+}
+
+.nav-item {
+  margin-right: 20px;
+  height: 90px;
+  display: flex;
+}
+
+.nav-link {
+  font-family: 'NeoSansStdRegular';
+  font-size: 18px;
+  height: 80px;
+  margin-top: 10px;
+  padding: 5px;
+  color: rgb(94, 94, 94);
+}
+
+.nav-link.active {
+  color: #C81A78;
+  border: 2px solid #C81A78;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+}
+
+.nav-item a:hover {
+  background-color: transparent;
+}
+
+.header-buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.login-button,
+.search-button,
+.button-cart {
+  background-color: transparent;
+  outline: none;
+  border: none;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  margin: 0 10px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.login-button {
+  padding: 0;
+  border: none;
+}
+
+.login-icon,
+.search-icon,
+.fa-shopping-cart {
+  width: 40px;
+  height: 40px;
+
 }
 
 .arrow-left {
@@ -59,47 +123,11 @@ a:hover {
   width: 30px;
 }
 
-.form-control,
-.btn {
-  border: 1px solid rgb(194, 194, 194);
-  color: grey;
-  font-size: 14px;
-}
-
-.div-search {
-  align-items: center;
-  display: flex;
-  justify-content: space-between;
-}
-
-.button-cart {
-  align-items: baseline;
-  align-self: center;
-  background-color: transparent;
-  border: none;
-  display: flex;
-  height: fit-content;
-  justify-content: flex-end;
-  margin: 0 10px;
-}
-
-.button-cart:focus {
-  outline: none;
-}
-
 .container-quantity-cart {
   display: flex;
   position: absolute;
-}
-
-.fa-shopping-cart {
-  font-size: 40px;
-  margin-right: 15px;
-  margin-top: 5px;
-}
-
-.fa-shopping-cart path {
-  fill: rgba(94, 94, 94, 0.8);
+  height: 40px;
+  align-items: flex-end;
 }
 
 .quantity-products-cart {
@@ -110,12 +138,14 @@ a:hover {
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
   border-radius: 50%;
-  color: rgb(94, 94, 94) !important;
+  color: #4FBFA5;
   display: flex;
-  font-size: 14px;
-  height: 20px;
+  font-size: 11px;
+  height: 15px;
   justify-content: center;
-  width: 20px;
+  width: 15px;
+  align-items: center;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .result-searchBar {
