--- a/src/components/footer/css/Footer.css
+++ b/src/components/footer/css/Footer.css
@@ -8,6 +8,10 @@
   padding: 15px;
   margin-top: 30px;
   box-shadow: 1px 2px 4px rgba(0, 0, 0, 1);
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  text-align: center;
 }
 
 .social-media {
