improv: remove folder api and request products in the home

--- a/src/components/cards/css/CardsHome.css
+++ b/src/components/cards/css/CardsHome.css
@@ -4,6 +4,7 @@
   justify-content: space-between;
   align-items: flex-start;
   margin-left: 220px;
+  padding-bottom: 70px;
 }
 
 .quantity-searched {
