--- a/src/components/cards/css/CardsHome.css
+++ b/src/components/cards/css/CardsHome.css
@@ -1,10 +1,11 @@
 .cards-home {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: flex-start;
   margin-left: 220px;
   padding-bottom: 20px;
+  height:100%;
 }
 
 .quantity-searched {
