--- a/src/pages/css/Home.css
+++ b/src/pages/css/Home.css
@@ -3,14 +3,15 @@ body {
   font-family: Open Sans, sans-serif;
   margin: 0;
   padding: 0;
-  background-color:rgba(215, 215, 215, 0.088);
+  background-color: rgba(215, 215, 215, 0.088);
 }
 
-.home-container{
+.home-container {
   display: flex;
   flex-wrap: nowrap;
   align-items: flex-start;
   justify-content: space-between;
+  height: 100%;
 }
 
 ::-webkit-scrollbar {
