--- a/src/components/header/css/SearchEmpty.css
+++ b/src/components/header/css/SearchEmpty.css
@@ -3,7 +3,9 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-top: 140px;
+  margin-top: 40px;
+  width: 100%;
+  height: 100%;
 }
 
 .emoji-empty {
