--- a/src/components/cards/css/CardsHome.css
+++ b/src/components/cards/css/CardsHome.css
@@ -5,7 +5,8 @@
   align-items: flex-start;
   margin-left: 220px;
   padding-bottom: 20px;
-  height:100%;
+  min-height:80vh;
+  width:100%
 }
 
 .quantity-searched {
