--- a/src/pages/css/Home.css
+++ b/src/pages/css/Home.css
@@ -6,7 +6,14 @@ body {
   background-color: rgba(215, 215, 215, 0.088);
 }
 
-.home-container {
+.home-page {
+  display: flex;
+  flex-direction: column;
+  align-items: space-between;
+  justify-content: space-between;
+}
+
+.home-cards {
   display: flex;
   flex-wrap: nowrap;
   align-items: flex-start;
